test/Runner/errors/tests/MI/TestSuite/Prepare4.runtime.js
eve("Suite", () => {
	suite("Suite", () => {
		throw new Error();
	}, "foo")
});